added p on GitHub

--- a/index.html
+++ b/index.html
@@ -55,5 +55,6 @@
       </div>
     </div>
     <p>Цей параграф створено в гілці dev</p>
+    <p>А цей створено у віддаленому репозиторію</p>
   </body>
 </html>
