change download index.html

--- a/index.html
+++ b/index.html
@@ -56,5 +56,6 @@
     </div>
     <p>Цей параграф створено в гілці dev</p>
     <p>А цей створено у віддаленому репозиторію</p>
+    <p>Це я вношу зміни в локальному скачаному репозиторію</p>
   </body>
 </html>
