changed index on test branch

--- a/index.html
+++ b/index.html
@@ -57,5 +57,6 @@
     <p>Цей параграф створено в гілці dev</p>
     <p>А цей створено у віддаленому репозиторію</p>
     <p>Це я вношу зміни в локальному скачаному репозиторію</p>
+    <p>Цей параграф створено в гілці test скачаного репозиторія</p>
   </body>
 </html>
