--- a/index.html
+++ b/index.html
@@ -58,5 +58,6 @@
     <p>А цей створено у віддаленому репозиторію</p>
     <p>Це я вношу зміни в локальному скачаному репозиторію</p>
     <p>Цей параграф створено в гілці test скачаного репозиторія</p>
+    <p>Цей параграф створено в гілці branchForFetch скачаного репозиторія</p>
   </body>
 </html>
